<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_home"
            android:title="@string/nav_txt_home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/nav_menu_favorite"
            android:title="@string/nav_txt_favorite"
            android:icon="@drawable/ic_favorite"/>

        <item
            android:id="@+id/nav_add_feed"
            android:title="@string/nav_menu_add_feed"
            android:icon="@drawable/ic_baseline_playlist_add_24"/>

        <item
            android:id="@+id/nav_menu_sign_in"
            android:title="@string/nav_txt_sign_in"
            android:icon="@drawable/ic_baseline_login_24"/>
        <item
            android:id="@+id/nav_menu_version"
            android:title="@string/version2_3_4"
            android:icon="@drawable/ic_sharp_miscellaneous_services_24"/>
    </group>
</menu>